--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://notetakingapp-80fw.onrender.com/"
-  // "proxy":"http://localhost:5000"
+  // "proxy":"https://notetakingapp-80fw.onrender.com/"
+  "proxy":"http://localhost:5000"
 }
